se modifico la pagina de politicas y agradecimientos de la aplicación

--- a/src/app/components/politicas/politicas.component.html
+++ b/src/app/components/politicas/politicas.component.html
@@ -53,6 +53,7 @@
     <b>Idea conceptual:</b> Luis Eduardo Gallego Vega<br />
     <b>Diseño, desarrollo, implementación y normativa para web:</b> Dirección Nacional de Programas Curriculares de Pregrado<br />
     <b>Ingenieros de desarrollo:</b> Edgar Fernando Vargas Buitrago - Fabián Otálora Orjuela<br />
+    <b>Recopilación de contenidos:</b> María Angélica Casadiego Sarmiento <br /> 
 <br /><br /><br />
 
 Dirección Nacional de Programas Curriculares de Pregrado – DNPPr<br />
