--- a/src/app/components/equivalencias/equivalencias.component.html
+++ b/src/app/components/equivalencias/equivalencias.component.html
@@ -8,6 +8,17 @@
 </div>
 <br style="wrap:both">
 <div class="row ">
+    <div class="col-md-2" >
+
+    </div>
+    <div class="col-md-8 col-xs-12 alert alert-info" style="line-height: normal">
+        <p>
+            La fuente de <b>las equivalencia</b> publicadas en el aplicativo son las resoluciones de doble titulación aprobadas por los Consejos de Sede del 2009 al 2015.<br /> Esta información será actualizada periodicamente.
+        </p>
+    </div>
+</div>
+
+<div class="row ">
         <div class="col-md-2" >
 
         </div>
