--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -61,7 +61,7 @@
         </a>
     </div>
     <div class="col-md-4">
-        <a [routerLink]="['/rutasusuarios']">
+        <!--<a [routerLink]="['/rutasusuarios']">
           <div class="row rutas ">
             <div class="icon col-md-4">
             </div>
@@ -69,6 +69,6 @@
               Rutas<br/>Curriculares usuarios
             </div>
           </div>
-        </a>
+        </a>-->
     </div>
 </div>
