Correciones de texto

--- a/src/app/components/afinidades/afinidades.component.html
+++ b/src/app/components/afinidades/afinidades.component.html
@@ -4,7 +4,7 @@
 
   </div>
   <div class="col-md-8 col-xs-12">
-      <div class="regresar text-right "><a [routerLink]="['/home']" class="btn btn-success" >Volvel al inicio</a></div>
+      <div class="regresar text-right "><a [routerLink]="['/home']" class="btn btn-success" >Volver al inicio</a></div>
   </div>
 </div>
 <br style="wrap:both">
@@ -112,7 +112,7 @@
     <div class="col-md-2 col-xs2" >
     </div>
     <div class="alert alert-danger col-md-8  col-xs-8">
-        <p>De acuerdo con el análisis realizado, el programa no cuenta con programas afines para doble titulación. Sin embargo, los estudiante pueden realizar solicitudes de doble titulación, mientras cumplan las condiciones establecidas en los artículos 47 al 50 del Acuerdo 008 del 2008 del CSU  y el Acuerdo 155 de 2014 del  CSU. </p>
+        <p>De acuerdo con el análisis realizado, el programa no cuenta con programas afines para doble titulación. Sin embargo, los estudiantes pueden realizar solicitudes de doble titulación, mientras cumplan las condiciones establecidas en <b>los artículos 47 al 50 del Acuerdo 008 del 2008 del CSU y el Acuerdo 155 de 2014 del CSU</b>. </p>
     </div>
   </ng-template>
 </div>
