--- a/src/app/components/equivalencias/equivalencias.component.html
+++ b/src/app/components/equivalencias/equivalencias.component.html
@@ -3,7 +3,7 @@
 
   </div>
   <div class="col-md-8 col-xs-12">
-      <div class="regresar text-right "><a [routerLink]="['/home']" class="btn btn-success" >Volvel al inicio</a></div>
+      <div class="regresar text-right "><a [routerLink]="['/home']" class="btn btn-success" >Volver al inicio</a></div>
   </div>
 </div>
 <br style="wrap:both">
