--- a/src/app/components/rutas/rutas.component.html
+++ b/src/app/components/rutas/rutas.component.html
@@ -4,7 +4,7 @@
 
   </div>
   <div class="col-md-8 col-xs-12">
-      <div class="regresar text-right "><a [routerLink]="['/home']" class="btn btn-success" >Volvel al inicio</a></div>
+      <div class="regresar text-right "><a [routerLink]="['/home']" class="btn btn-success" >Volver al inicio</a></div>
   </div>
 </div>
 <br style="wrap:both">
@@ -71,7 +71,7 @@
     <div class="col-md-2" >
     </div>
     <div class="alert alert-danger col-md-8 text-md-center" >
-        <p>Este programa no cuenta con rutas propuesta por el programa curricular.</p>
+        <p>Este programa no cuenta con rutas propuestas por el programa curricular.</p>
     </div>
 
   </div>
